<resources>
    <string name="app_name">WakeMeUp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hostname_server">192.168.56.101</string>
    <!--<string name="hostname_server">10.0.2.2</string>-->
    <!--<string name="hostname_server">93.7.106.171</string>-->

    <string name="menu_settings">Paramètres</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="pref_history">Historique de vote</string>
    <string name="pref_history_summary">Connaître qui a voté pour vous</string>
    <string name="pref_whowakeme">Qui peut me réveiller</string>
    <string name="pref_whowakeme_summary">Autorisation</string>
    <string name="pref_user_name">Nom utilisateur</string>
    <string name="pref_user_name_summary">Entrer le nom du profil</string>
    <string name="pref_reveil_default">Réveil par défault</string>
    <string name="pref_reveil_default_summary">Lien YouTube</string>
    <string name="pref_mdp">Changer mot de passe</string>

    <string name="pref_version">Version</string>
    <string name="pref_version_summary">1.0</string>

    <string name="pref_user_profil">Profil Utilisateur</string>
    <string name="pref_update_setting">Paramètres reveil</string>
    <string name="pref_about">A propos</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="hint_password">password</string>
    <string name="valider">Valider</string>
    <string name="nom_password">Mot de passe</string>
    <string name="hint_username">username</string>
    <string name="hint_pseudo">nickname</string>
    <string name="nom_pseudo">Pseudonyme</string>

    <string name="search_hint">Search</string>

    <string name="action_cart">Notification</string>

    <string name="send_a_message">Message</string>
    <string name="send">Envoyer</string>
    <string name="notsend">Rien envoyer</string>

    <string name="answer">Répondre</string>
    <string name="no_answer">Ne pas répondre</string>

    <string name="toto">TOTO TOTO TOTOOOOOOOOOOO</string>

    <string name="pref_design_image_title">Image</string>
    <string name="pref_design_image_summary">Choose a design image to overlay</string>
    <string name="pref_design_image_alpha_title">Alpha</string>
    <string name="pref_design_image_alpha_summary">Alpha: %1$s %</string>

    <color name="background_general">#5b361c</color>
    <color name="primary">#ce3a3a</color>
    <color name="text_primary">#fafafa</color>
    <color name="primary_dark">#453636</color>
    <color name="accent">#996060</color>
    <color name="test">#00ff04</color>

</resources>
