<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
            android:title="@string/pref_user_name"
            android:summary="@string/pref_user_name_summary"
            android:key="prefUsername"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="enable"
            android:key="prefHistory"
            android:summary="@string/pref_history_summary"
            android:title="@string/pref_history" >
        </CheckBoxPreference>

        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />

        <EditTextPreference
            android:title="@string/pref_reveil_default"
            android:summary="@string/pref_reveil_default_summary"
            android:key="prefReveilDefault"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about">
        <EditTextPreference
            android:title="@string/pref_version"
            android:summary="@string/pref_version_summary"
            android:editable="false"
        />
    </PreferenceCategory>

</PreferenceScreen>
